--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,5 +1,5 @@
 # file: .github/workflows/hello-world.yml
-name: hello-world
+name: hello-world-wow
 # on – определяет события, которые запускают воркфлоу
 on: push
 jobs:
